fixed the portfolio grid image overflow

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -23,3 +23,8 @@
 .image-row {
   margin-bottom: 20px;
 }
+
+.frame {
+  margin-bottom: 20px;
+  overflow: hidden;
+}
